test/libyul/yulSyntaxTests/if_statement_invalid_3.yul
{
    if 32 let x := 3
}
// ====
// dialect: evm
// ----
// ParserError 2314: (12-15): Expected '{' but got reserved keyword 'let'
